--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>For Testing VectorTiles</title>
+    <title>NY Address Location</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css' rel='stylesheet' />
-    <link href='style.css' rel='stylesheet' />
 </head>
 <body>
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js'></script>
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css' type='text/css' />
+    <link href='style.css' rel='stylesheet' />
+
     <nav id="menu"></nav>
     <div id='map'></div>
-    
+    <div id='geocoder' class='geocoder'></div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
     <script src='script.js'></script>
 </body>
 </html>
