--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <nav id="menu"></nav>
     <div id='map'></div>
     <div id='geocoder' class='geocoder'></div>
+    <div id='nygeocoder' class='nygeocoder'>
+        <input id='street' type='text' class='street' placeholder="NY Geo Search"/><button id='streetbtn' type='submit'>Search</button>
+       
+        <div id='listings' class='listings'></div>
+    </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
     <script src='script.js'></script>
 </body>
