--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css' type='text/css' />
     <link href='style.css' rel='stylesheet' />
 
-    <nav id="menu"><button id='showtable'>Show</button><button id='hidetable'>Hide </button></nav>
+    <nav id="menu"><button id='showtable'>Street Search</button><button id='hidetable'>Hide</button></nav>
     <div id='map'></div>
     <div class='geocodersdiv'>
         <div id='geocoder' class='geocoder'></div>
@@ -25,17 +25,15 @@
 
     <div id="tablepanel">
          <div id='nygeocoder' class='nygeocoder'>
-            <input id='street' type='text' class='street' placeholder="NY Geo Search"/><button id='streetbtn' type='submit'>Search</button>
-
-            <!-- <div id='listings' class='listings'></div> -->
+            <input id='street' type='text' class='street' placeholder="NY Geo Search"/><button id='streetbtn' type='submit'>Find Street Names</button>
         </div>
         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="table" width="80%">
                 <thead>
                     <tr>
-                        <th>rank</th>
-                        <th>address</th>
-                        <th>lon</th>
-                        <th>lat</th>
+                        <!-- <th>rank</th> -->
+                        <th>Address</th>
+                        <th>Longitude</th>
+                        <th>Latitude</th>
 
                     </tr>
                 </thead>
