--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ section:last-child {
     </section>
     <section id='Cheyenne Mountain Zoo'>
         <h3>Cheyenne Mountain Zoo</h3>
-        <p>Cheyenne is America's only zoo that is built in the side of a mountain. If you love visiting zoos, and you are looking for a unique experience Cheyenne Mountain Zoo does not dissapoint.</p><br><br> <img class='rotate90' width="400" height="400" src="images/zoo.jpg"><br><br></p>
+        <p>Cheyenne is America's only zoo that is built in the side of a mountain. If you love visiting zoos, and you are looking for a unique experience Cheyenne Mountain Zoo does not dissapoint.</p><br><br> <img class='rotate90' width="400" height="400" src="images/zoo.JPG"><br><br></p>
     </section>
     <section id='Pikes Peak'>
         <h3>Pikes Peak</h3>
